--- a/DreamDwellReality/index.html
+++ b/DreamDwellReality/index.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Diplomata&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <title>DreamDwell Reality</title>
   </head>
   <body>
     <div id="root"></div>
